--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,7 +5,8 @@
 @mixin text-shadow-DK
   text-shadow: 5px 5px 7px #333
 
-@mixin xsm
+// DESKTOP FIRST
+@mixin xs
 	@media screen and (max-width : 320px)
 		@content
 
@@ -22,6 +23,37 @@
 		@content
 
 
-@mixin xlg
+@mixin xl
 	@media screen and (max-width : 1200px)
 		@content
+
+
+/*************** NAVBAR HAMBURGER *******************/
+
+nav button.navbar-toggler
+	outline: none
+	height: 40px
+
+span.navbar-toggler-icon
+	display: block
+	width: 40px
+	height: 2px
+	background: black
+	position: relative
+	transition: .3s
+
+span.navbar-toggler-icon::before,
+span.navbar-toggler-icon::after
+	position: absolute
+	width: 100%
+	height: 100%
+	left: 0
+	background: black
+	content: ''
+	transition: .3s
+
+span.navbar-toggler-icon::before
+	top: -10px
+
+span.navbar-toggler-icon::after
+	top: 10px
