--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -32,4 +32,52 @@ span.navbar-toggler-icon::after {
   top: 10px;
 }
 
+/*STAGE 1 - HOVER*/
+span.navbar-toggler-icon.stage1::before {
+  top: -12px;
+}
+
+span.navbar-toggler-icon.stage1::after {
+  top: 12px;
+}
+
+/*STAGE 2 - CLICK*/
+span.navbar-toggler-icon.stage2 {
+  background: transparent;
+}
+
+span.navbar-toggler-icon.stage2::before {
+  top: 0;
+  transform: rotate(-5deg);
+}
+
+span.navbar-toggler-icon.stage2::after {
+  top: 2px;
+  transform: rotate(365deg);
+}
+
+/*STAGE 3*/
+span.navbar-toggler-icon.stage3::before {
+  transform: rotate(-140deg);
+  background: #dd423c;
+  height: 3px;
+}
+
+span.navbar-toggler-icon.stage2.stage3::after {
+  top: 0;
+  transform: rotate(140deg);
+  background: #dd423c;
+  height: 3px;
+}
+
+span.navbar-toggler-icon.stage3.stage1::before {
+  transform: rotate(-150deg);
+}
+
+span.navbar-toggler-icon.stage3.stage1::after {
+  transform: rotate(150deg);
+}
+
+/*************** NAVBAR HAMBURGER END *******************/
+
 /*# sourceMappingURL=style.css.map */
